stateDiagram-v2
    [*] --> detecting

    detecting --> done: isAlreadyDone
    detecting --> blocked: isBlocked
    detecting --> error: isError
    detecting --> mergeQueueLogging: triggeredByMergeQueueEntry
    detecting --> mergeQueueFailureLogging: triggeredByMergeQueueFailure
    detecting --> processingMerge: triggeredByPRMerged
    detecting --> deployedStageLogging: triggeredByDeployedStage
    detecting --> deployedProdLogging: triggeredByDeployedProd
    detecting --> triaging: triggeredByTriage
    detecting --> commenting: triggeredByComment
    detecting --> orchestrating: triggeredByOrchestrate
    detecting --> prReviewing: triggeredByPRReview
    detecting --> prResponding: triggeredByPRResponse
    detecting --> prRespondingHuman: triggeredByPRHumanResponse
    detecting --> processingReview: triggeredByPRReviewApproved
    detecting --> processingCI: triggeredByCI
    detecting --> processingReview: triggeredByReview
    detecting --> triaging: needsTriage
    detecting --> initializing: needsSubIssues
    detecting --> orchestrating: hasSubIssues
    detecting --> reviewing: isInReview
    detecting --> iterating: always
    triaging --> [*]: final
    commenting --> [*]: final
    prReviewing --> [*]: final
    prResponding --> [*]: final
    prRespondingHuman --> [*]: final
    orchestrating --> orchestrationComplete: allPhasesDone
    orchestrating --> orchestrationWaiting: currentPhaseInReview
    orchestrating --> orchestrationRunning: always
    orchestrationRunning --> [*]: final
    orchestrationWaiting --> [*]: final
    orchestrationComplete --> [*]: final
    processingCI --> transitioningToReview: readyForReview
    processingCI --> iterating: ciPassed
    processingCI --> blocked: shouldBlock
    processingCI --> iteratingFix: ciFailed
    processingCI --> iterating: always
    processingReview --> awaitingMerge: reviewApproved
    processingReview --> iterating: reviewRequestedChanges
    processingReview --> reviewing: always
    awaitingMerge --> [*]: final
    iterating --> transitioningToReview: todosDone
    iterating --> iterating
    iterating --> blocked: maxFailuresReached
    iterating --> iteratingFix
    iterating --> [*]: final
    iteratingFix --> transitioningToReview: todosDone
    iteratingFix --> iterating
    iteratingFix --> blocked: maxFailuresReached
    iteratingFix --> iteratingFix
    iteratingFix --> [*]: final
    reviewing --> iterating
    reviewing --> [*]: final
    blocked --> [*]: final
    error --> [*]: final
    mergeQueueLogging --> [*]: final
    mergeQueueFailureLogging --> [*]: final
    deployedStageLogging --> [*]: final
    deployedProdLogging --> [*]: final
    done --> [*]: final